--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,23 +75,14 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Set up Java for publishing to Maven Central Repository
+        uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "temurin"
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
-          cache: maven
-      - name: Deploy JavaDoc 🚀
-        uses: MathieuSoysal/Javadoc-publisher.yml@v3.0.2
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          javadoc-branch: javadoc
-          java-version: 21
-          target-folder: docs/latest/javadoc
-          javadoc-source-folder: target/reports/apidocs
       - name: Publish package
         run: |
           export JITPACK=true
@@ -103,3 +94,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+      - name: Deploy JavaDoc 🚀
+        uses: MathieuSoysal/Javadoc-publisher.yml@v3.0.2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          javadoc-branch: javadoc
+          java-version: 21
+          target-folder: docs/latest/javadoc
+          javadoc-source-folder: target/reports/apidocs
