--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,9 +86,10 @@ jobs:
       - name: Publish package
         run: |
           export JITPACK=true
-          mvn --batch-mode -P jitpack -Dturing.open-browser=false deploy
-          cd turing-js-sdk/js-sdk-lib
-          npm publish
+          cd turing-js-sdk
+          mvn --batch-mode -P jitpack -Dturing.open-browser=false deploy -am
+        # cd turing-js-sdk/js-sdk-lib
+        # npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
