--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,7 @@ jobs:
         run: |
           export JITPACK=true
           cd turing-js-sdk
-          mvn --batch-mode -P jitpack -Dturing.open-browser=false deploy -am
+          mvn --batch-mode deploy -am
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
         env:
