Fix deploy workflow to use correct SDK directory
Changed the deployment step in the GitHub Actions workflow to use 'turing-java-sdk' instead of 'turing-js-sdk' when publishing the package.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Publish package
         run: |
           export JITPACK=true
-          cd turing-js-sdk
+          cd turing-java-sdk
           mvn --batch-mode deploy -am
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
