Add GPG key import to deploy workflow and GPG config to pom.xml
The deploy workflow now imports the GPG private key from secrets for package signing. The pom.xml is updated to include GPG keyname and passphrase properties to support artifact signing during deployment.

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <sonar.organization>viglet</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <gpg.keyname>30AA85DC937DA16691466FE2A0CCF43371503F2D</gpg.keyname>
+        <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
     </properties>
     <build>
         <plugins>
