--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,7 @@ jobs:
           echo "$GPG_PRIVATE_KEY" > private.key
           gpg --batch --import private.key
           gpg --list-secret-keys
+          echo "GPG_TTY=$(tty)" >> $GITHUB_ENV
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Publish package
