Fix deploy workflow and reorder GPG plugin in pom.xml
Updates the GitHub Actions deploy workflow to use the -pl flag for turing-commons instead of changing directories. Moves the maven-gpg-plugin configuration to the end of the plugins list in pom.xml for better organization.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,8 +93,7 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Publish package
         run: |
-          cd turing-commons
-          mvn --batch-mode deploy -am -Dgpg.passphrase="${GPG_PASSPHRASE}"
+          mvn --batch-mode -pl turing-commons deploy -am -Dgpg.passphrase="${GPG_PASSPHRASE}"
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
         env:
