Update maven-deploy-plugin configuration in pom files
Added and configured maven-deploy-plugin in root and turing-commons pom.xml files. Set <skip>true> in the root pom to skip deployment, and <skip>false> in turing-commons to enable deployment. Also changed flattenMode in the flatten-maven-plugin from resolveCiFriendliesOnly to oss.

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.4</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.2.1</version>
                 <executions>
@@ -134,7 +141,7 @@
                 <version>1.7.2</version>
                 <configuration>
                     <updatePomFile>true</updatePomFile>
-                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                    <flattenMode>oss</flattenMode>
                 </configuration>
                 <executions>
                     <!-- enable flattening -->
