--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,7 +93,7 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Publish package
         run: |
-          mvn --batch-mode deploy -pl turing-commons -am -Dgpg.passphrase="${GPG_PASSPHRASE}"
+          mvn -Dgpg.passphrase="${GPG_PASSPHRASE}" --batch-mode deploy -pl turing-commons -am
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
         env:
