Update Maven plugins and deployment configuration
Added maven-deploy-plugin and central-publishing-maven-plugin to parent pom.xml for improved deployment control. Enhanced pluginManagement in turing-commons/pom.xml with comments and additional plugin version specifications to clarify lifecycle bindings and ensure consistent builds.

--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,19 @@
         <spring-boot.version>3.5.5</spring-boot.version>
         <sonar.organization>viglet</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <maven.deploy.skip>true</maven.deploy.skip>
         <gpg.keyname>30AA85DC937DA16691466FE2A0CCF43371503F2D</gpg.keyname>
         <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
-        <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.4</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>3.2.1</version>
@@ -70,7 +77,15 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.8.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
@@ -230,6 +245,7 @@
         </profile>
     </profiles>
     <dependencyManagement>
+
         <dependencies>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
