--- a/turing-ui/tsconfig.json
+++ b/turing-ui/tsconfig.json
@@ -16,18 +16,10 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "es2019",
-      "dom",
-      "dom.iterable",
-    ],
+    "lib": ["es2022", "dom", "dom.iterable"],
     "paths": {
-      "@environments/*": [
-        "environments/*"
-      ],
-      "angular-octicons": [
-        "dist/angular-octicons"
-      ]
+      "@environments/*": ["environments/*"],
+      "angular-octicons": ["dist/angular-octicons"]
     }
   },
   "angularCompilerOptions": {
