Add central.publishing.skip property to Maven modules
Introduces the central.publishing.skip property to all relevant pom.xml files to control publishing behavior for each module. Updates the deploy workflow to include turing-aem/aem-commons in the published packages.

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <maven.deploy.skip>true</maven.deploy.skip>
         <gpg.keyname>30AA85DC937DA16691466FE2A0CCF43371503F2D</gpg.keyname>
         <gpg.passphrase>${env.GPG_PASSPHRASE}</gpg.passphrase>
+        <central.publishing.skip>true</central.publishing.skip>
     </properties>
     <build>
         <plugins>
