--- a/turing-aem/pom.xml
+++ b/turing-aem/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <central.publishing.skip>true</central.publishing.skip>
     </properties>
     <modules>
         <module>aem-commons</module>
