--- a/turing-java-sdk/pom.xml
+++ b/turing-java-sdk/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.deploy.skip>false</maven.deploy.skip>
+        <central.publishing.skip>false</central.publishing.skip>
     </properties>
     <dependencies>
         <dependency>
