Add central-publishing-maven-plugin to pom files
Integrated org.sonatype.central:central-publishing-maven-plugin version 0.9.0 into multiple module pom.xml files to manage publishing configuration. Enabled or disabled publishing as appropriate for each module and removed pluginManagement from turing-commons/pom.xml in favor of direct plugin configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
                 <version>0.9.0</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <skipPublishing>true</skipPublishing>
                     <publishingServerId>central</publishingServerId>
                 </configuration>
             </plugin>
