--- a/turing-aem/pom.xml
+++ b/turing-aem/pom.xml
@@ -25,4 +25,18 @@
         <module>aem-plugin</module>
         <module>aem-plugin-sample</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.9.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <skipPublishing>true</skipPublishing>
+                    <publishingServerId>central</publishingServerId>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
