Add project metadata and update dependencies in pom files
Added license, developer, and SCM information to module pom.xml files for better project documentation. Updated several dependencies in turing-commons and turing-java-sdk to newer versions for improved stability and compatibility. Set <inherited>false> for plugin configuration in the root pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                 <configuration>
                     <skipPublishing>true</skipPublishing>
                     <publishingServerId>central</publishingServerId>
+                    <inherited>false</inherited>
                 </configuration>
             </plugin>
             <plugin>
