--- a/turing-aem-commons/pom.xml
+++ b/turing-aem-commons/pom.xml
@@ -3,11 +3,12 @@
     xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.viglet.turing.connector</groupId>
-        <artifactId>turing-aem</artifactId>
+        <groupId>com.viglet.turing</groupId>
+        <artifactId>turing</artifactId>
         <version>2025.3.56</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <groupId>com.viglet.turing.connector</groupId>
     <artifactId>aem-commons</artifactId>
     <packaging>jar</packaging>
     <name>Turing AEM - Commons</name>
@@ -91,16 +92,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.central</groupId>
-                <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.9.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <skipPublishing>false</skipPublishing>
-                    <publishingServerId>central</publishingServerId>
                 </configuration>
             </plugin>
         </plugins>
