Fix module path in Maven deploy step
Corrected the module path from 'turing-aem/aem-commons' to 'turing-aem-commons' in the GitHub Actions deploy workflow to ensure proper package publishing.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -93,7 +93,7 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       - name: Publish package
         run: |
-          mvn --batch-mode  -pl turing-commons,turing-java-sdk,turing-aem/aem-commons -P release -am deploy -Dgpg.passphrase="${GPG_PASSPHRASE}"
+          mvn --batch-mode -pl turing-commons,turing-java-sdk,turing-aem-commons -P release deploy -Dgpg.passphrase="${GPG_PASSPHRASE}"
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
         env:
