Add Artemis queue browser service and enable JMX
Introduces TurQueueBrowserService to list and browse Artemis queue contents using JMX and JMS. Updates application.yaml to enable JMX and set the embedded broker name for Artemis integration.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -1,4 +1,5 @@
 spring:
+  jmx.enabled: true
   profiles:
     active: production
   h2:
@@ -38,6 +39,7 @@ spring:
     mode: EMBEDDED
     broker-url: localhost:61616
     embedded:
+      broker-name: artemis
       enabled: true
       persistent: true
       data-directory: store/queue
