Add Maven profile for JS SDK build automation
Introduces a 'javascript-compile' Maven profile using frontend-maven-plugin to automate Node.js and npm setup, dependency installation, and build steps for js-sdk-lib and js-sdk-sample. Updates compile-all.cmd to use the new profile and adds 'node' to .gitignore for improved build consistency.

--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,88 @@
             </build>
         </profile>
         <profile>
+            <id>javascript-compile</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.eirslett</groupId>
+                        <artifactId>frontend-maven-plugin</artifactId>
+                        <version>1.14.1</version>
+                        <executions>
+                            <execution>
+                                <id>install-node-and-npm-lib</id>
+                                <goals>
+                                    <goal>install-node-and-npm</goal>
+                                </goals>
+                                <configuration>
+                                    <workingDirectory>turing-js-sdk/js-sdk-lib</workingDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>npm-install-js-sdk-lib</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <arguments>install</arguments>
+                                    <workingDirectory>turing-js-sdk/js-sdk-lib</workingDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>npm-build-js-sdk-lib-sdk</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <arguments>run build</arguments>
+                                    <workingDirectory>turing-js-sdk/js-sdk-lib</workingDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>install-node-and-npm</id>
+                                <goals>
+                                    <goal>install-node-and-npm</goal>
+                                </goals>
+                                <configuration>
+                                    <workingDirectory>turing-js-sdk/js-sdk-sample</workingDirectory>
+                                </configuration>
+                            </execution>
+                            <!-- Build js-sdk-sample -->
+                            <execution>
+                                <id>npm-install-js-sdk-sample</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <arguments>install</arguments>
+                                    <workingDirectory>turing-js-sdk/js-sdk-sample</workingDirectory>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>npm-compile-js-sdk-sample</id>
+                                <goals>
+                                    <goal>npm</goal>
+                                </goals>
+                                <phase>generate-resources</phase>
+                                <configuration>
+                                    <arguments>run compile</arguments>
+                                    <workingDirectory>turing-js-sdk/js-sdk-sample</workingDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <nodeVersion>v22.18.0</nodeVersion>
+                            <npmVersion>11.5.2</npmVersion>
+                        </configuration>
+                    </plugin>
+
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>coverage</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
