Add option for reactive indexing in AEM plugin
Introduces a new configuration property 'reactive.indexing' to enable or disable reactive indexing in the AEM plugin. The processing logic now conditionally uses reactive or synchronous methods based on this setting, improving flexibility for different deployment scenarios.

--- a/turing-connector/connector-app/src/main/resources/application.yaml
+++ b/turing-connector/connector-app/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ turing:
     cron: "-"
     cron.zone: UTC
     dependencies.enabled: false
+    reactive.indexing: false
   scheduler:
     enabled: false
   solr:
