--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-java@v5
         with:
           java-version: "21"
-          distribution: "zulu"
+          distribution: "temurin"
           cache: maven
       - name: Cache SonarCloud packages
         uses: actions/cache@v4
