Add Solr commit configuration options
Introduces 'commit.enabled' and 'commit.within' properties to control Solr commit behavior via application.yaml. Updates TurSolr to use these properties for conditional commit and configurable commitWithin timing.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -98,6 +98,9 @@ turing:
   solr:
     timeout: 30000
     cloud: false
+    commit:
+      within: 10000
+      enabled: false
   search:
     cache:
       ttl:
