Refactor AEM configuration and update formatting settings
Replaced usage of IAemConfiguration with TurAemConfiguration in utility and extension interfaces for consistency. Added new fields and constructors to TurAemConfiguration to support author/publish flags and SNSite properties. Updated .vscode settings to use a local Eclipse Java formatter profile and added the profile file. Improved license headers and method signatures in extension interfaces and implementations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,9 +7,8 @@
 
   // Java Language Server memory tuning
   "java.jdt.ls.vmargs": "-Xms4096m -Xmx8192m -XX:+UseG1GC -XX:+UseStringDeduplication",
-  "java.format.settings.url": "https://raw.githubusercontent.com/google/styleguide/gh-pages/eclipse-java-google-style.xml",
+  "java.format.settings.url": "./eclipse-java-style.xml",
   "java.format.settings.profile": "GoogleStyle",
-
   // Disable automatic builds to reduce CPU usage
   "java.autobuild.enabled": false,
 
